# Chicot

./: CMakeLists.txt  README.md  conanfile.txt  transaction.capnp
.github/workflows/: release.yaml
Inc/: Ledger.h  Transaction.h  crypto.h  ledger.h  transaction.capnp.h  transaction.h  utils.h  wallet.h
Src/: CMakeLists.txt  ledger.cpp  main.cpp  transaction.capnp.cpp  transaction.cpp  utils.cpp  wallet.cpp
Test/: CMakeLists.txt  test_wallet.cpp
html/: Ledger_8h.html  Ledger_8h_source.html  annotated.html  classBlock-members.html  classBlock.html  classBlockData_1_1Builder-members.html  classBlockData_1_1Builder.html  classBlockData_1_1Pipeline-members.html  classBlockData_1_1Pipeline.html  classBlockData_1_1Reader-members.html  classBlockData_1_1Reader.html  classCrypto-members.html  classCrypto.html  classLedger-members.html  classLedger.html  classLedgerData_1_1Builder-members.html  classLedgerData_1_1Builder.html  classLedgerData_1_1Pipeline-members.html  classLedgerData_1_1Pipeline.html  classLedgerData_1_1Reader-members.html  classLedgerData_1_1Reader.html  classTransactData_1_1Builder-members.html  classTransactData_1_1Builder.html  classTransactData_1_1InputData_1_1Builder-members.html  classTransactData_1_1InputData_1_1Builder.html  classTransactData_1_1InputData_1_1Pipeline-members.html  classTransactData_1_1InputData_1_1Pipeline.html  classTransactData_1_1InputData_1_1Reader-members.html  classTransactData_1_1InputData_1_1Reader.html  classTransactData_1_1OutputData_1_1Builder-members.html  classTransactData_1_1OutputData_1_1Builder.html  classTransactData_1_1OutputData_1_1Pipeline-members.html  classTransactData_1_1OutputData_1_1Pipeline.html  classTransactData_1_1OutputData_1_1Reader-members.html  classTransactData_1_1OutputData_1_1Reader.html  classTransactData_1_1Pipeline-members.html  classTransactData_1_1Pipeline.html  classTransactData_1_1Reader-members.html  classTransactData_1_1Reader.html  classTransaction-members.html  (+112 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  (+64 more)
